[package]
name = "btle1"
version = "0.1.0"
authors = ["pi"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
btleplug="0.7.2"
rumqttc = "0.5.0"
rand = "0.8.3"
simple_logger = "1.11.0"
structopt = { version = "0.3", default-features = false }
serde = { version = "1.0", features = ["derive"] }
toml = "0.4.8"
typetag = "0.1.7"
ctrlc = "3.1.9"
rusoto_core = "0.46.0"
rusoto_cloudwatch = "0.46.0"
futures = "0.3.14"
tokio = ""
async-trait = "0.1.50"